--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: 🚀 Deploy Trading Data Terminal
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -25,12 +25,42 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🟢 Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+      - name: 🔐 Validate Firebase Secrets
+        run: |
+          echo "🔐 Проверка Firebase Secrets..."
+          
+          # Проверяем все 8 обязательных секретов
+          REQUIRED_SECRETS=(
+            "FIREBASE_API_KEY"
+            "FIREBASE_AUTH_DOMAIN"
+            "FIREBASE_DATABASE_URL"
+            "FIREBASE_PROJECT_ID"
+            "FIREBASE_STORAGE_BUCKET"
+            "FIREBASE_MESSAGING_SENDER_ID"
+            "FIREBASE_APP_ID"
+            "FIREBASE_MEASUREMENT_ID"
+          )
+          
+          HAS_ERROR=false
+          for SECRET in "${REQUIRED_SECRETS[@]}"; do
+            if [ -z "${!SECRET}" ]; then
+              echo "❌ $SECRET: ОТСУТСТВУЕТ в GitHub Secrets"
+              HAS_ERROR=true
+            else
+              # Маскируем значение для логов
+              VALUE="${!SECRET}"
+              MASKED="${VALUE:0:6}...${VALUE: -6}"
+              echo "✅ $SECRET: присутствует ($MASKED)"
+            fi
+          done
+          
+          if [ "$HAS_ERROR" = true ]; then
+            echo "❌ КРИТИЧЕСКАЯ ОШИБКА: Отсутствуют обязательные Firebase Secrets"
+            echo "📋 Добавьте все 8 секретов в GitHub: Settings → Secrets and variables → Actions"
+            exit 1
+          fi
 
-      - name: 🔐 Validate Secrets
+      - name: 🔧 Generate Firebase Config
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
@@ -41,114 +71,121 @@ jobs:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
         run: |
-          echo "🔐 [SECRETS] Проверяем все секреты..."
+          echo "🔧 Генерация firebase-config.js..."
           
-          if [ -z "$FIREBASE_API_KEY" ]; then echo "❌ FIREBASE_API_KEY отсутствует"; exit 1; fi
-          if [ -z "$FIREBASE_AUTH_DOMAIN" ]; then echo "❌ FIREBASE_AUTH_DOMAIN отсутствует"; exit 1; fi
-          if [ -z "$FIREBASE_DATABASE_URL" ]; then echo "❌ FIREBASE_DATABASE_URL отсутствует"; exit 1; fi
-          if [ -z "$FIREBASE_PROJECT_ID" ]; then echo "❌ FIREBASE_PROJECT_ID отсутствует"; exit 1; fi
-          if [ -z "$FIREBASE_STORAGE_BUCKET" ]; then echo "❌ FIREBASE_STORAGE_BUCKET отсутствует"; exit 1; fi
-          if [ -z "$FIREBASE_MESSAGING_SENDER_ID" ]; then echo "❌ FIREBASE_MESSAGING_SENDER_ID отсутствует"; exit 1; fi
-          if [ -z "$FIREBASE_APP_ID" ]; then echo "❌ FIREBASE_APP_ID отсутствует"; exit 1; fi
-          if [ -z "$FIREBASE_MEASUREMENT_ID" ]; then echo "❌ FIREBASE_MEASUREMENT_ID отсутствует"; exit 1; fi
+          # Создаем конфиг с реальными значениями из Secrets
+          cat > firebase-config.js << 'EOF'
+          // ====================================================
+          // 🔥 FIREBASE CONFIG - GENERATED FROM GITHUB SECRETS
+          // ⚠️ Этот файл создается автоматически GitHub Actions
+          // ====================================================
           
-          echo "✅ Все 8 секретов присутствуют!"
-
-      - name: 🧹 Clear GitHub Pages Cache
-        run: |
-          echo "🧹 [CACHE] Очищаем кэш GitHub Pages..."
-          echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
-
-      - name: 🔧 Generate Firebase Config with Cache Busting
-        env:
-          FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-          FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
-          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-          FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-          FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
-        run: |
-          echo "🔧 Генерируем firebase-config.js..."
+          console.log('🚀 Загрузка Firebase конфигурации...');
           
-          # Создаем конфиг с реальными значениями из Secrets с использованием простого метода
-          echo "// ====================================================" > firebase-config.js
-          echo "// 🔥 FIREBASE CONFIG - GENERATED FROM GITHUB SECRETS" >> firebase-config.js
-          echo "// ⚠️ Этот файл создается автоматически GitHub Actions" >> firebase-config.js
-          echo "// ====================================================" >> firebase-config.js
-          echo "" >> firebase-config.js
-          echo "console.log('🚀 Загрузка Firebase конфигурации...');" >> firebase-config.js
-          echo "" >> firebase-config.js
-          echo "const firebaseConfig = {" >> firebase-config.js
-          echo "  apiKey: \"$FIREBASE_API_KEY\"," >> firebase-config.js
-          echo "  authDomain: \"$FIREBASE_AUTH_DOMAIN\"," >> firebase-config.js
-          echo "  databaseURL: \"$FIREBASE_DATABASE_URL\"," >> firebase-config.js
-          echo "  projectId: \"$FIREBASE_PROJECT_ID\"," >> firebase-config.js
-          echo "  storageBucket: \"$FIREBASE_STORAGE_BUCKET\"," >> firebase-config.js
-          echo "  messagingSenderId: \"$FIREBASE_MESSAGING_SENDER_ID\"," >> firebase-config.js
-          echo "  appId: \"$FIREBASE_APP_ID\"," >> firebase-config.js
-          echo "  measurementId: \"$FIREBASE_MEASUREMENT_ID\"" >> firebase-config.js
-          echo "};" >> firebase-config.js
-          echo "" >> firebase-config.js
-          echo "console.log('✅ [CONFIG] Конфигурация готова:', firebaseConfig.projectId);" >> firebase-config.js
-          echo "" >> firebase-config.js
-          echo "// Сохраняем в глобальной области видимости" >> firebase-config.js
-          echo "if (typeof window !== 'undefined') {" >> firebase-config.js
-          echo "  window.firebaseConfig = firebaseConfig;" >> firebase-config.js
-          echo "  console.log('✅ [CONFIG] firebaseConfig доступен в window');" >> firebase-config.js
-          echo "}" >> firebase-config.js
-          echo "" >> firebase-config.js
-          echo "// CommonJS экспорт" >> firebase-config.js
-          echo "if (typeof module !== 'undefined' && module.exports) {" >> firebase-config.js
-          echo "  module.exports = firebaseConfig;" >> firebase-config.js
-          echo "}" >> firebase-config.js
+          const firebaseConfig = {
+            apiKey: "$FIREBASE_API_KEY",
+            authDomain: "$FIREBASE_AUTH_DOMAIN",
+            databaseURL: "$FIREBASE_DATABASE_URL",
+            projectId: "$FIREBASE_PROJECT_ID",
+            storageBucket: "$FIREBASE_STORAGE_BUCKET",
+            messagingSenderId: "$FIREBASE_MESSAGING_SENDER_ID",
+            appId: "$FIREBASE_APP_ID",
+            measurementId: "$FIREBASE_MEASUREMENT_ID"
+          };
+          
+          // Валидация конфигурации
+          if (!firebaseConfig.apiKey || firebaseConfig.apiKey === '') {
+            console.error('❌ КРИТИЧЕСКАЯ ОШИБКА: FIREBASE_API_KEY отсутствует');
+          }
+          
+          if (!firebaseConfig.projectId || firebaseConfig.projectId === '') {
+            console.error('❌ КРИТИЧЕСКАЯ ОШИБКА: FIREBASE_PROJECT_ID отсутствует');
+          }
+          
+          console.group('📊 Firebase Configuration:');
+          console.log('✅ Проект:', firebaseConfig.projectId);
+          console.log('✅ Auth Domain:', firebaseConfig.authDomain);
+          console.log('✅ Database:', firebaseConfig.databaseURL);
+          console.groupEnd();
+          
+          // Глобальная переменная для доступа из других скриптов
+          if (typeof window !== 'undefined') {
+            window.firebaseConfig = firebaseConfig;
+            console.log('✅ Конфигурация сохранена в window.firebaseConfig');
+          }
+          
+          console.log('✅ FIREBASE CONFIG READY\n');
+          
+          // CommonJS экспорт (если нужно)
+          if (typeof module !== 'undefined' && module.exports) {
+            module.exports = firebaseConfig;
+          }
+          EOF
           
           echo "✅ Конфиг создан"
           echo "📏 Размер файла:" $(wc -c < firebase-config.js) "байт"
-          echo "🔍 Проверка конфига..."
           
-          # Проверяем, что нет плейсхолдеров
-          if grep -q "{{" firebase-config.js; then
-            echo "❌ ОШИБКА: В конфиге остались плейсхолдеры!"
-            cat firebase-config.js
+          # Проверяем что Secrets корректно подставились
+          echo "🔍 Проверка подстановки переменных..."
+          if grep -q '\$FIREBASE_' firebase-config.js; then
+            echo "❌ ОШИБКА: Не все переменные подставились!"
+            echo "Первые 500 символов файла:"
+            head -c 500 firebase-config.js
             exit 1
           fi
           
-          if grep -q "FIREBASE_API_KEY" firebase-config.js; then
-            echo "❌ ОШИБКА: Переменные не подставлены!"
-            cat firebase-config.js
+          if grep -q 'apiKey: ""' firebase-config.js; then
+            echo "❌ ОШИБКА: API Key пустой!"
             exit 1
           fi
           
-          echo "✅ Конфиг проверен - все переменные подставлены"
-          
-          # Удаляем шаблонный файл, чтобы не было путаницы
-          if [ -f "firebase-config.js.template" ]; then
-            echo "🗑️ Удаляем шаблонный файл..."
-            rm firebase-config.js.template
-          fi
+          echo "✅ Все проверки пройдены"
 
-      - name: 📄 Create Support Files
+      - name: 📄 Create GitHub Pages Files
         run: |
+          echo "📄 Создание вспомогательных файлов..."
+          # Отключаем Jekyll
           touch .nojekyll
-          echo "✅ Файлы созданы"
+          
+          # Опционально: CNAME файл для кастомного домена
+          # echo "askhat707.github.io" > CNAME
+          
+          # Создаем robots.txt
+          cat > robots.txt << 'EOF'
+          User-agent: *
+          Allow: /
+          Sitemap: https://askhat707.github.io/trading-data/sitemap.xml
+          EOF
+          
+          echo "✅ Вспомогательные файлы созданы"
 
-      - name: 📋 List Files
+      - name: 📁 Verify Build Structure
         run: |
-          echo "📁 Структура репозитория:"
-          ls -la | head -20
+          echo "📁 Проверка структуры файлов..."
+          echo "Текущая директория: $(pwd)"
           echo ""
-          echo "✅ Критические файлы:"
-          test -f "index.html" && echo "  ✅ index.html" || echo "  ❌ index.html"
-          test -f "firebase-config.js" && echo "  ✅ firebase-config.js" || echo "  ❌ firebase-config.js"
-          test -f "js/app.js" && echo "  ✅ js/app.js" || echo "  ❌ js/app.js"
-          test -f "css/base.css" && echo "  ✅ css/base.css" || echo "  ❌ css/base.css"
+          echo "Содержимое:"
+          ls -la
+          echo ""
+          echo "Проверка критических файлов:"
+          test -f "index.html" && echo "✅ index.html" || echo "❌ index.html"
+          test -f "firebase-config.js" && echo "✅ firebase-config.js" || echo "❌ firebase-config.js"
+          test -d "js" && echo "✅ js directory" || echo "❌ js directory"
+          test -d "css" && echo "✅ css directory" || echo "❌ css directory"
+          
           echo ""
           echo "🔍 Проверка firebase-config.js:"
           if [ -f "firebase-config.js" ]; then
-            echo "Первые 10 строк:"
-            head -10 firebase-config.js
+            echo "Первые 5 строк:"
+            head -5 firebase-config.js
+            echo ""
+            echo "Содержит ли API Key?"
+            if grep -q 'apiKey: "AIza' firebase-config.js; then
+              echo "✅ API Key найден (начинается с AIza)"
+            else
+              echo "⚠️  API Key может быть в другом формате"
+              grep 'apiKey:' firebase-config.js | head -1
+            fi
           fi
 
       - name: 📦 Upload Pages Artifact
@@ -156,6 +193,6 @@ jobs:
         with:
           path: .
 
-      - name: 🚀 Deploy to Pages
+      - name: 🚀 Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
